--- a/src/Styles/Rune.css
+++ b/src/Styles/Rune.css
@@ -7,10 +7,10 @@
 /*   border: 1px solid rgba(230, 178, 7, 0.5);
   border-radius: 2px; */
   color: #fff;
-  background: url("../public/rune.png") no-repeat 50%;
+  background: url("../../public/rune.png") no-repeat 50%;
 }
 
 .not-selected{
   color: #777;
-  background: url("../public/dimRune.png") no-repeat 50%;
+  background: url("../../public/dimRune.png") no-repeat 50%;
 }
