--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -10,6 +10,16 @@ p{
   box-shadow: inset 0 0 7px 0 rgb(0 0 0 / 40%), 0 0 0 1px rgb(255 255 255 / 3%);
 }
 
+.canMake{
+  border-style: solid;
+  border-color: #01FF70;
+}
+
+.cantMake{
+  border-style: solid;
+  border-color: #FF4136;
+}
+
 h2{
   color: #ecd2a8;
 }
