--- a/src/Styles/SearchBox.css
+++ b/src/Styles/SearchBox.css
@@ -1,7 +1,8 @@
 .searchBox{
   color: #cdc7b5;
   border-radius: 3px;
-  background: rgba(70,70,70,.5);
+  background: rgb(50,50,50);
+  -webkit-background: rgb(50,50,50);
   border: 1px solid #000;
   height: 2em;
   padding-left: 0.5em;
