--- a/src/Styles/SearchBox.css
+++ b/src/Styles/SearchBox.css
@@ -1,14 +1,11 @@
-.searchBox{
+input[type=search]{
   -webkit-appearance: none;
   color: #cdc7b5;
   border-radius: 3px;
-  background: rgb(50,50,50) !important; 
+  background-color: rgb(50,50,50) !important;
   border: 1px solid #000;
   height: 2em;
   padding-left: 0.5em;
-  box-shadow: inset 0 0 7px 0 rgb(0 0 0 / 40%), 0 0 0 1px rgb(255 255 255 / 3%);
-}
-
-input[type=search]{
+  box-shadow: inset 0 0 7px 0 rgb(0 0 0 / 0.4), 0 0 0 1px rgb(255 255 255 / 0.03);
   font-size: max(1em, 16px);
 }
