--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -9,3 +9,12 @@
 img{
   color: #ecd2a8;
 }
+
+p.patch-text{
+  margin: 0;
+  margin-bottom: 1rem;
+  /* color: #19a974; */
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.8rem;
+  color: #AFAFAF;
+}
