--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -1,7 +1,8 @@
 .container{
-  display:flex;
+/*   display:flex;
   flex-wrap:wrap;
-  justify-content: center;
+  justify-content: center; */
+  text-align: center;
   margin-top: 1em;
   margin-bottom: 0.7em;
 }
@@ -17,4 +18,8 @@ p.patch-text{
   font-family: Arial, Helvetica, sans-serif;
   font-size: 0.8rem;
   color: #AFAFAF;
+}
+
+p.patch-text span{
+  color: #44aa44;
 }
